--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-  "name": "my-app",
+  "name": "ts-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "antd": "^4.23.6",
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "classnames": "^2.3.2",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "moment": "^2.29.4",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-promise": "^0.6.0",
+    "typescript": "^4.8.4",
+    "web-vitals": "^2.1.0",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-promise": "^0.5.29"
   }
 }
